# smbios-lib

./: Cargo.toml
.github/workflows/: smbios_ci.yml
src/: file_io.rs  lib.rs  main.rs
src/core/: entry_point.rs  header.rs  smbios_data.rs  strings.rs  undefined_struct.rs
src/macos/: platform.rs
src/structs/: defined_struct.rs
src/structs/types/: additional_information.rs  baseboard_information.rs  bios_information.rs  bios_language_information.rs  bis_entry_point.rs  built_in_pointing_device.rs  cache_information.rs  cooling_device.rs  electrical_current_probe.rs  end_of_table.rs  firmware_inventory_information.rs  group_associations.rs  hardware_security.rs  inactive.rs  ipmi_device_information.rs  management_controller_host_interface.rs  management_device.rs  management_device_component.rs  management_device_threshold_data.rs  memory_array_mapped_address.rs  memory_channel.rs  memory_controller_information.rs  memory_device.rs  memory_device_mapped_address.rs  memory_error_information_32.rs  memory_error_information_64.rs  memory_module_information.rs  oem_strings.rs  on_board_device_information.rs  onboard_devices_extended_information.rs  out_of_band_remote_access.rs  physical_memory_array.rs  port_connector_information.rs  portable_battery.rs  processor_additional_information.rs  processor_information.rs  string_property.rs  system_boot_information.rs  system_chassis_information.rs  system_configuration_options.rs  (+10 more)
src/unix/: platform.rs
src/windows/: platform.rs  win_struct.rs
