[package]
name = "smbios-lib"
version = "0.9.1"
authors = ["Jeffrey R. Gerber <jeffreygerber@gmail.com>", "Ante Čulo <dante2711@gmail.com>", "Juan Zuluaga <juzuluag@hotmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "SMBIOS Library"
homepage = "https://github.com/jrgerber/smbios-lib"
repository = "https://github.com/jrgerber/smbios-lib"
readme = "README.md"
keywords = ["bios", "smbios", "dmtf"]
categories = ["hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["no-std-compat/std", "serde/std", "dep:getopts"]

[lib]
name = "smbioslib"
path = "src/lib.rs"

[[bin]]
name = "smbiosdump"
path = "src/main.rs"

[dependencies]
getopts = { version = "0.2.21", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
no-std-compat = { version = "0.4.1", features = ["alloc"] }

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "^0.2"
mach = "^0.3"
core-foundation = "~0.6"
core-foundation-sys = "~0.6"
io-kit-sys = "0.1.0"
